--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
 MONGODB_URI=mongodb+srv://TDDD27:jZZQgFI4aRGrGuIw@uploadscluster.delrqyf.mongodb.net/?retryWrites=true&w=majority
+
+JWT_SECRET=TESTKEYFORTOKEN123
+
+SALT=10
+
+NODE_ENV=development
