--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://TDDD27:jZZQgFI4aRGrGuIw@uploadscluster.delrqyf.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://hillert:rmvpwZp63axO3evc@uploadscluster.delrqyf.mongodb.net/?retryWrites=true&w=majority
 
 JWT_SECRET=TESTKEYFORTOKEN123
 
