--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,14 @@
-MONGODB_URI=mongodb+srv://hillert:rmvpwZp63axO3evc@uploadscluster.delrqyf.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://TDDD27:a0mOaDs7yrpTNcoL@uploadscluster.delrqyf.mongodb.net/?retryWrites=true&w=majority
+
+
 
 JWT_SECRET=TESTKEYFORTOKEN123
 
 SALT=10
 
 NODE_ENV=development
+
+
+
+
+a0mOaDs7yrpTNcoL
